[project]
name = "fortifypass"
version = "0.2.1"
description = "A modern password validation library powered by zxcvbn with policy enforcement and CLI support."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Botshelo Mere" }]
requires-python = ">=3.9"

dependencies = [
    "zxcvbn>=4.4.28",
    "colorama>=0.4.6"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.scripts]
fortifypass = "fortifypass.cli:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "jsonschema>=4.0"
]

[project.urls]
Repository = "https://github.com/botshelo-mere/fortifypass"
Issues = "https://github.com/botshelo-mere/fortifypass/issues"
License = "https://github.com/botshelo-mere/fortifypass/blob/main/LICENSE.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmarking tests"
]

[tool.coverage.run]
branch = true
source = ["fortifypass"]

[tool.coverage.report]
show_missing = true
skip_covered = true